<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activities.AddMessageActivity">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <EditText
                android:id="@+id/eMessage"
                android:inputType="textMultiLine"
                android:hint="@string/message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="1"/>

        <EditText
                android:id="@+id/ePhone"
                android:inputType="phone"
                android:hint="@string/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/eDate"
                android:inputType="date"
                android:hint="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        <EditText
                android:id="@+id/eTime"
                android:inputType="time"
                android:hint="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>


        <Button
                android:id="@+id/btnSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

    </LinearLayout>



</RelativeLayout>
